Fix extraneous scrollbar in device previews (#66494)

--- a/packages/block-editor/src/components/iframe/style.scss
+++ b/packages/block-editor/src/components/iframe/style.scss
@@ -1,7 +1,6 @@
 .block-editor-iframe__container {
 	width: 100%;
 	height: 100%;
-	overflow-x: hidden;
 }
 
 .block-editor-iframe__scale-container {
